--- a/frontend/help-desk/package.json
+++ b/frontend/help-desk/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3"
   },
